# The-AiEdge-Code-Examples

./: .gitignore  README.md
code-examples/LLM-Applications/Basic-RAG/: api.py  indexing_pipeline.py  test_code.ipynb
code-examples/LLM-Applications/FastAPI-RAG-LangGraph/: README.md  pyproject.toml
code-examples/LLM-Applications/FastAPI-RAG-LangGraph/backend/app/: main.py  openai_connect.py
code-examples/LLM-Applications/FastAPI-RAG-LangGraph/backend/app/chat/: api.py  cruds.py  models.py  schemas.py
code-examples/LLM-Applications/FastAPI-RAG-LangGraph/backend/app/chat/chat_agent/: agent.py  state.py
code-examples/LLM-Applications/FastAPI-RAG-LangGraph/backend/app/chat/chat_agent/nodes/: fallback.py  generation_evaluator.py  generator.py  intent_router.py  retriever.py  simple_assistant.py
code-examples/LLM-Applications/FastAPI-RAG-LangGraph/backend/app/core/: db.py
code-examples/LLM-Applications/FastAPI-RAG-LangGraph/backend/app/indexing/: api.py  indexer.py  schemas.py
code-examples/LLM-Applications/FastAPI-RAG-LangGraph/frontend/: chat.py  main.py
code-examples/LLM-Applications/GraphRAG/: data_models.py  generation.py  indexing_pipeline.py
code-examples/LLM-Applications/LATS-with-Burr/: chains.py  graph.py  nodes.py  prompts.py  reflection.py  test_code.ipynb  tools.py  tree.py
code-examples/LLM-Applications/LATS-with-LangGraph/: chains.py  graph.py  nodes.py  prompts.py  reflection.py  test_code.ipynb  tools.py  tree.py
code-examples/LLM-Applications/RAG-with-LangGraph/: chains.py  data_index.py  graph.py  langgraph-rag.ipynb  nodes.py  (+2 more)
(+44 files in other folders)
